--- a/html/index-tabs.html
+++ b/html/index-tabs.html
@@ -55,9 +55,9 @@
 					<div id="columns">
 
 					        <div id="column1" class="column">
-					            <div class="widget color-green" id="intro">
+					            <div class="widget color-green" id="green-widget">
 					                <div class="widget-head">
-					                    <h3>Introduction Widget</h3>
+					                    <h3>Coverflow Widget</h3>
 					                </div>
 					                <div class="widget-content">
 					                    <p>
