--- a/html/index-tabs.html
+++ b/html/index-tabs.html
@@ -12,12 +12,12 @@
   	<link type="text/css" href="css/custom.css" rel="stylesheet" />
   
   
-	<script type="text/javascript" src="../js/jquery-1.3.2.js"></script>
-	<script type="text/javascript" src="../js/jquery.layout.js"></script>
-	<script type="text/javascript" src="../js/custom.js"></script>
-	<script type="text/javascript" src="../js/ui.all-1.7.1.js"></script>
-	<script type="text/javascript" src="../js/custom.js"></script>
-	<script type="text/javascript" src="../js/jquery.highlight.js"></script>
+	<script type="text/javascript" src="js/jquery-1.3.2.js"></script>
+	<script type="text/javascript" src="js/jquery.layout.js"></script>
+	<script type="text/javascript" src="js/custom.js"></script>
+	<script type="text/javascript" src="js/ui.all-1.7.1.js"></script>
+	<script type="text/javascript" src="js/custom.js"></script>
+	<script type="text/javascript" src="js/jquery.highlight.js"></script>
 	    
 
 
@@ -54,7 +54,7 @@
 
 					<div id="columns">
 
-					        <div id="column1" class="column">
+					      <div id="column1" class="column">
 					            <div class="widget color-green" id="green-widget">
 					                <div class="widget-head">
 					                    <h3>Coverflow Widget</h3>
@@ -164,7 +164,20 @@
 
 
 <div class="ui-layout-west">
- 					
+ 					<div id="columns">
+
+					        <div id="column1" class="column">
+					            <div class="widget color-red" id="intro">
+					                <div class="widget-head">
+					                    <h3>Introduction Widget</h3>
+					                </div>
+					                <div class="widget-content">
+					                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam magna sem, fringilla in, commodo a, rutrum ut, massa. Donec id nibh eu dui auctor tempor. Morbi laoreet eleifend dolor. Suspendisse pede odio, accumsan vitae, auctor non, suscipit at, ipsum. Cras varius sapien vel lectus.</p>
+					                </div>
+					            </div>
+					        </div>
+
+					    </div>
 </div>
 </div>
 
