Add example of JQuery table

--- a/html/index-tabs.html
+++ b/html/index-tabs.html
@@ -80,8 +80,8 @@
 				                    <h3>Widget title</h3>
 				                </div>
 				                <div class="widget-content">
-				                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam magna sem, fringilla in, commodo a, rutrum ut, massa. Donec id nibh eu dui auctor tempor. Morbi laoreet eleifend dolor. Suspendisse pede odio, accumsan vitae, auctor non, suscipit at, ipsum. Cras varius sapien vel lectus.</p>
-				                </div>
+				                     <iframe height="400" width="680" name="framename" id="myframe" src="tables.html"></iframe>
+					            </div>
 		            		</div>
 	            		 </div>
 
