Up to date versions of all

--- a/html/index-tabs.html
+++ b/html/index-tabs.html
@@ -61,7 +61,7 @@
 					                </div>
 					                <div class="widget-content">
 					                    <p>
-					                    <iframe height="400" width="680" name="framename" id="myframe" src="../coverflow/coverflow.html"></iframe>
+					                    <iframe height="400" width="680" name="framename" id="myframe" src="coverflow/coverflow.html"></iframe>
 					                    </p> 
 					                    </div>
 					            </div>
@@ -188,6 +188,6 @@
 <div class="ui-layout-south">South</div>
 
 </body>
-		<script type="text/javascript" src="../js/widgets/inettuts.js"></script>
+		<script type="text/javascript" src="js/widgets/inettuts.js"></script>
      	<link href="css/inettuts.css" rel="stylesheet" type="text/css" />
 </html>
