--- a/html/coverflow/coverflow.html
+++ b/html/coverflow/coverflow.html
@@ -84,7 +84,7 @@
 		<div class="wrap" id="bodyWrap">
 
 
-
+		 <!-- Here is where call to restful service for patient/images -->	
 		 <div id="coverflow">
 
 			<img src="imgs/cover1.jpg" alt="The Beatles - Abbey Road"/>
