Save before closing all tabs and opening up new set of tabs

--- a/html/menuContent.html
+++ b/html/menuContent.html
@@ -2,9 +2,10 @@
 	<li><a href="#">Add Tab</a>
 		
 	</li>
-	<li><a href="#">Save</a>
-		
-	</li>
+	<li><a href="#">Save</a></li>
+	
+	<li><a href="#">Close Tabs</a></li>
+	
 	<li><a href="#">Test</a>
 		
 	</li>
