--- a/html/test.html
+++ b/html/test.html
@@ -1,18 +1,371 @@
+<%@ page import="org.mitre.medcafe.util.*" %>
+<%@ page import="org.mitre.medcafe.model.*" %>
+<%@ page import="java.util.logging.*" %>
+<%@ page import="java.util.HashMap" %>
+<%@ taglib uri="http://java.sun.com/jstl/core" prefix="c" %>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-<head>
-    <script type="text/javascript" src="js/vel2js.js"></script>
-    <script type="text/javascript" src="js/vel2jstools.js"></script>
-</head>
-<body>
-<form><select>
-<script type="text/javascript">
-    var data = {"years":[
-        {"months":[6,7,8,9,10,11,12],"year":2008},
-        {"months":[1,2,3,4,5,6,7,8],"year":2009}]}
+<%!
+    public final static String KEY = "/index.jsp";
+    public final static Logger log = Logger.getLogger( KEY );
+    static{log.setLevel(Level.FINER);}%><%
+    PatientCache cache = (PatientCache) session.getAttribute(PatientCache.KEY);
+    if( cache == null )
+    {  //nobody is logged in
+        log.warning("No patient selected");
+        response.sendRedirect("introPage.jsp");
+        return;
+    }
 
-    var html = v2js_hellojson( data );
-    document.write(html);
-</script>
-</select></form>
+
+    /*
+	String patientId = request.getParameter("patient_id");
+	if (patientId == null)
+	{
+		Object patientObj = session.getAttribute("patient");
+		if (patientObj != null)
+		 	patientId = patientObj.toString();
+	}
+	if (patientId == null)
+		patientId = "1";
+    */
+	// Object repositoryIdObjs = 	session.getAttribute("repPatientIds");
+
+%>
+<head>
+
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+
+	<title>medCafe</title>
+
+	<link type="text/css" href="css/custom-theme/jquery-ui-1.7.2.custom.css" rel="stylesheet" />
+  	<link type="text/css" href="css/custom.css" rel="stylesheet" />
+	<link type="text/css" href="css/demo_page.css" rel="stylesheet" />
+	<link type="text/css" href="css/demo_table.css" rel="stylesheet" />
+  	<link type="text/css" rel="stylesheet" href="css/treeview/jquery.treeview.css" />
+	<link type="text/css" rel="stylesheet" href="css/treeview/screen.css" />
+	<link type="text/css" rel="stylesheet" href="css/jqzoom.css" />
+	<link type="text/css" rel="stylesheet" href="css/jquery.iviewer.css" />
+	<link type="text/css" rel="stylesheet" href="css/annotation.css" />
+	<link type="text/css" rel="stylesheet" href="css/fg.menu.css" />
+	<link type="text/css" rel="stylesheet" href="css/fullcalendar.css" />
+	<link rel="Stylesheet" href="css/ui.slider.extras.css" type="text/css" />
+	<link type="text/css" rel="stylesheet" href="css/editor/jquery.rte.css" />
+	<link type="text/css" rel="stylesheet" href="css/annotation.css" />
+
+	<script type="text/javascript" src="js/jquery-1.3.2.js"></script>
+	<script type="text/javascript" src="js/jquery.layout.js"></script>
+	<script type="text/javascript" src="js/ui.all-1.7.1.js"></script>
+	<script type="text/javascript" src="js/medCafe.js"></script>
+	<script type="text/javascript" src="js/medCafeTabs.js"></script>
+	<script type="text/javascript" src="js/jquery.highlight.js"></script>
+	<script type="text/javascript" language="javascript" src="js/jquery.dataTables.js"></script>
+	<script type="text/javascript" language="javascript" src="js/jquery.delay.js"></script>
+	<script src="js/treeview/jquery.treeview.js" type="text/javascript"></script>
+	<script language="javascript" type="text/javascript" src="js/jquery.flot.js"></script>
+ 	<script language="javascript" type="text/javascript" src="js/jquery.flot.selection.js"></script>
+ 	<script type="text/javascript" src="js/jquery.iviewer.js" ></script>
+ 	<script type="text/javascript" src="js/jquery.mousewheel.js" ></script>
+ 	<script src="js/jqzoom.pack.1.0.1.js" type="text/javascript"></script>
+	<script type="text/javascript" src="js/menu/fg.menu.js"></script>
+	<script type="text/javascript" src="js/menus.js"></script>
+	<script type="text/javascript" src="js/vel2jstools.js"></script>
+	<script type="text/javascript" src="js/vel2js.js"></script>
+	<script type="text/javascript" src="js/jquery.jeditable.js"></script>
+	<script type="text/javascript" src="js/fullcalendar.js"></script>
+	<script type="text/javascript" src="js/medCafe.widget.js"></script>
+	<script type="text/javascript" src="js/medCafe.calendar.js"></script>
+    <script type="text/javascript" src="js/medCafe.patients.js"></script>
+	<script type="text/javascript" src="js/medCafe.history.js"></script>
+	<script type="text/javascript" src="js/medCafe.repository.js"></script>
+	<script type="text/javascript" src="js/medCafe.problemList.js"></script>
+	<script type = "text/javascript" src = "js/medCafe.supportInfo.js"></script>
+	<script type="text/javascript" src="js/medCafeSouthTabs.js"></script>
+	<script type="text/javascript" src="js/medCafe.touch.js"></script>
+ 	<script type="text/javascript" src="js/medCafe.images.js"></script>
+ 	<script type="text/javascript" src="js/jScrollTouch.js"></script>
+ 	<script type="text/javascript" src="js/selectToUISlider.jQuery.js"></script>
+ 	<script language="JavaScript" type="text/javascript" src="contentflow/contentflow_src.js" load="white medCafe"></script>
+    <script type="text/javascript" src="js/jquery.iviewer.js" ></script>
+
+    <script type="text/javascript" src="js/editor/jquery.rte.js"></script>
+	<script type="text/javascript" src="js/editor/jquery.rte.tb.js"></script>
+ 	<script type="text/javascript" src="js/jquery.qtip-1.0.0-rc3.min.js"></script>
+ 	<script type="text/javascript" src="js/jquery.annotate.js"></script>
+
+
+ 	<script language="javascript" type="text/javascript" src="js/jquery.flot.js"></script>
+ 	<script language="javascript" type="text/javascript" src="js/jquery.flot.selection.js"></script>
+	<script>
+ 	   Timeline_ajax_url="http://${server}/js/timeline/simile-ajax-api.js";
+	   Timeline_urlPrefix='http://${server}/js/timeline/';
+       Timeline_parameters='bundle=true';
+    </script>
+    <script src="http://${server}/js/timeline/timeline-api.js?bundle=true" type="text/javascript">
+    </script>
+    <script src="js/timeline/examples.js" type="text/javascript"></script>
+    <!-- script src="http://127.0.0.1:8080/medcafe/js/timeline/timeline-api.js?bundle=true" type="text/javascript">
+    </script>
+    <script src="http://127.0.0.1:8080/medcafe/js/timeline/simile-ajax-api.js" type="text/javascript"></script>
+    <script src="http://127.0.0.1:8080/medcafe/js/timeline/simile-ajax-bundle.js" onerror="" type="text/javascript"></script>
+    <script src="http://127.0.0.1:8080/medcafe/js/timeline/timeline-bundle.js" onerror="" type="text/javascript"></script>
+    <link rel="stylesheet" href="http://127.0.0.1:8080/medcafe/js/timeline/timeline-bundle.css" type="text/css">
+    <script src="http://127.0.0.1:8080/medcafe/js/timeline/scripts/l10n/en/timeline.js" onerror="" type="text/javascript"></script>
+    <script src="http://127.0.0.1:8080/medcafe/js/timeline/scripts/l10n/en/labellers.js" onerror="" type="text/javascript"></script>
+    <link rel="stylesheet" href="http://127.0.0.1:8080/medcafe/js/timeline/styles/graphics.css" type="text/css"-->
+
+
+	<script>
+        var outerLayout;
+		var repositoryPatientJSON = {};
+
+        var tabID;
+        /*
+        *#######################
+        *		 ON PAGE LOAD
+        *#######################
+        */
+
+        $(function(){
+           refresh("<%=cache.getDatabasePatientId()%>");
+        });
+
+
+        initialize();
+		getHeader();
+
+		function getHeader()
+		{
+			listHistory("listPatientHistory", "<%=cache.getDatabasePatientId()%>", "${server}", "Personal");
+        	listHistory("listFamilyHistory", "<%=cache.getDatabasePatientId()%>", "${server}", "Family");
+        	listProblemList("listProblemSummary", "<%=cache.getDatabasePatientId()%>", "${server}", 'OurVista');
+		}
+
+		function initialize(repositoryJSON)
+		{
+			repositoryPatientJSON = getAssocPatientRepositories("<%=cache.getDatabasePatientId()%>");
+		}
+
+		var isiPad = navigator.userAgent.match(/iPad/i) != null;
+
+ 		if (isiPad)
+ 		{
+			document.addEventListener('touchmove', function(e){ e.preventDefault(); });
+		 }
+		function BlockMove(event) {
+  			// Tell Safari not to move the window.
+  			event.preventDefault() ;
+ 		}
+
+ 		loadWidgetData(  "generalWidgets", "<%=Constants.GENERAL_WIDGETS%>");
+ 		loadWidgetData( "patientWidgets", "<%=Constants.PATIENT_WIDGETS%>");
+
+	</script>
+    <%--  {{{ css --%>
+    <style type='text/css'>
+        /* #calendar {
+            width: 250px;
+            margin: 0 auto;
+            } */
+            	.no-copy {
+	  			-webkit-user-select: none;
+	  			}
+
+		fieldset { border:0; margin-top: 1em;}
+		.ui-slider {clear: both; top: 5em;}
+    </style>
+
+</head>
+<body ontouchmove="BlockMove(event);">
+
+
+    <div id="head"></div>
+    <div id="dialog" >Are you sure you want to close?</div>
+	<div id="saveDialog" >You are about to close all tabs for this patient. Would you like to save changes?</div>
+    <div id="associatePatientDialog"></div>
+
+<div class="ui-layout-center ui-corner-all no-copy">
+	<div id="announcements"></div>
+	<div id="tabs" >
+	    <ul class="tabs" id ="test">
+	    <!-- add wrapper that Layout will auto-size to 'fill space' -->
+    	</ul>
+        <div id="tabs-1" class="tabContent">
+
+        </div>
+    </div>
+    <div class="ui-tabs-panel ui-widget-content ui-corner-bottom tabContent ui-tabs-hide" id="tabs-2">
+
+
+
+<div class="id" id="Details"></div>
+<div id="columns">
+
+	<div id="column2" class="column">
+			<div class="widget color-2" id="yellow-widget2">
+				<div style="cursor: move;" class="widget-head">
+					   <a href="#" class="collapse">COLLAPSE</a>
+					   <h3>Details</h3>
+
+					   <a href="#" class="remove">CLOSE</a><a href="#" class="edit">EDIT</a>
+					   <a href="#" class="maximize">MAXIMIZE</a>
+				</div>
+				<div class="edit-box" style="display: none;">
+
+					                <ul><li class="item">
+					                	<label>Change the title?</label>
+					                	<input value="Details"></li></ul>
+
+
+					                <li class="item"><label>Available colors:</label>
+					                <ul class="colors"><li class="color-1&gt;&lt;/li&gt;
+					                &lt;li class=" color-2=""></li><li class="color-3"></li>
+					                <li class="color-4"></li><li class="color-5"></li>
+					                <li class="color-6"></li></ul></li>
+				</div>
+
+				<div class="widget-content no-copy ui-droppable" id="widget-content2">
+
+
+					    	<p></p><div id="aaa2" class="no-copy">
+					    		</div>
+
+
+
+					    	<div id="dialog2">
+					    		<div id="modalaaa2"></div>
+					    	</div>
+					    	<div id="hasContent" custom:hascontent="false"></div>
+
+				</div>
+	       </div>
+    </div>
+</div>
+
+
+</div><div class="ui-tabs-panel ui-widget-content ui-corner-bottom tabContent ui-tabs-hide" id="tabs-3">
+
+
+
+<div class="id" id="Medications"></div>
+<div id="columns">
+
+	<div id="column3" class="column">
+			<div class="widget color-3" id="yellow-widget3">
+				<div style="cursor: move;" class="widget-head">
+					   <a href="#" class="collapse">COLLAPSE</a>
+
+					   <h3>Medications</h3>
+					   <a href="#" class="remove">CLOSE</a><a href="#" class="edit">EDIT</a>
+					   <a href="#" class="maximize">MAXIMIZE</a>
+				</div>
+				<div class="edit-box" style="display: none;">
+
+					                <ul><li class="item">
+					                	<label>Change the title?</label>
+
+					                	<input value="Medications"></li></ul>
+
+					                <li class="item"><label>Available colors:</label>
+					                <ul class="colors"><li class="color-1&gt;&lt;/li&gt;
+					                &lt;li class=" color-2=""></li><li class="color-3"></li>
+					                <li class="color-4"></li><li class="color-5"></li>
+					                <li class="color-6"></li></ul></li>
+				</div>
+
+				<div class="widget-content no-copy ui-droppable" id="widget-content3">
+
+
+					    	<p></p><div id="aaa3" class="no-copy">
+
+					    		</div>
+
+
+					    	<div id="dialog3">
+					    		<div id="modalaaa3"></div>
+					    	</div>
+					    	<div id="hasContent" custom:hascontent="true"></div>
+
+				</div>
+	       </div>
+    </div>
+</div>
+
+
+
+</div><div class="ui-tabs-panel ui-widget-content ui-corner-bottom tabContent" id="tabs-4">
+
+
+
+<div class="id" id="Allergies"></div>
+<div id="columns">
+
+	<div id="column4" class="column">
+			<div class="widget color-4" id="yellow-widget4">
+				<div style="cursor: move;" class="widget-head">
+					   <a style="" href="#" class="collapse">COLLAPSE</a>
+
+					   <h3>Allergies</h3>
+					   <a href="#" class="remove">CLOSE</a><a style="" href="#" class="edit">EDIT</a>
+					   <a href="#" class="maximize">MAXIMIZE</a>
+				</div>
+				<div class="edit-box" style="display: none;">
+
+					                <ul><li class="item">
+					                	<label>Change the title?</label>
+
+					                	<input value="Allergies"></li></ul>
+
+					                <li class="item"><label>Available colors:</label>
+					                <ul class="colors"><li class="color-1&gt;&lt;/li&gt;
+					                &lt;li class=" color-2=""></li><li class="color-3"></li>
+					                <li class="color-4"></li><li class="color-5"></li>
+					                <li class="color-6"></li></ul></li>
+				</div>
+
+				<div style="display: block;" class="widget-content no-copy ui-droppable" id="widget-content4">
+
+
+					    	<p></p><div id="aaa4" class="no-copy">
+
+					    		</div>
+
+
+
+					    	<div id="hasContent" custom:hascontent="true"></div>
+
+				</div>
+	       </div>
+    </div>
+</div>
+
+
+
+</div></div>
+
+<div class="ui-layout-east  ui-corner-all">
+	<div id="accordion">
+    	<h3><a href="#">General Widgets</a></h3>
+    	<div>
+			<p>
+				<div id="generalWidgets"></div>
+				<!-- iframe height="400" frameborder="0" width="155" name="widgetframe" id="general_widgetsFrame" src="http://${server}/widgets-list.jsp"></iframe-->
+			</p>
+		</div>
+		<h3><a href="#">Patient Specific</a></h3>
+    	<div>
+    		<p>
+    			<div id="patientWidgets"></div>
+				<!--iframe height="400" frameborder="0" width="155" name="patientWidgetframe" id="patient_widgetsFrame" src="http://${server}/widgets-list.jsp?type=patient_widgets"></iframe-->
+			</p>
+    	</div>
+	</div>
+</div>
+
+<div id="clone" class="copy"></div>
 </body>
+<script type="text/javascript" src="js/widgets/inettuts.js"></script>
+<link href="css/inettuts.css" rel="stylesheet" type="text/css" />
+
+
 </html>
