Can name tabs as they are added.

--- a/html/menuContent.html
+++ b/html/menuContent.html
@@ -1,6 +1,19 @@
 <ul>
 	<li><a href="#">Add Tab</a>
-		
+<div id="dialogBlock" style= "display:none">	
+<div id="dialog-newTab" title="Create new tab">
+	<p class="validateTips">Use only alphanumeric characters with no spaces.</p>
+
+	<form>
+	<fieldset>
+		<label for="tabName">Name for new tab</label>
+		<input type="text" name="tabName" id="tabName" value="New" class="text ui-widget-content ui-corner-all" />
+
+	</fieldset>
+	</form>
+</div>
+</div>
+	
 	</li>
 	<li><a href="#">Save</a></li>
 	
