Simplify WidgetList.xml to have program set defaults rather than explicitly setting them.

--- a/html/schedulePopup.html
+++ b/html/schedulePopup.html
@@ -1,7 +1,7 @@
 <div id='activityScheduleDiv' style="display:none;">
   <form id="activityScheduleForm" action="setSchedule.jsp" method='post'>
     <input type='hidden' id="newCalendarEventID" name="newCalendarEventID" />
-    <div width="96%" style="text-align:left;">
+    <div  style="text-align:left; width:96%">
       <div style="margin: 5px 0px;"> <span style="display:inline-block;width:75px;">Start Date:</span><span>
         <input type="text" name="appoint_date" id="activityStartDate" size="20" />
         </span> <span style="width:20px;display:inline-block;"></span>
@@ -224,5 +224,6 @@
       <textarea name='activityDescription' id="activityDescription" cols="60"   rows="4" ></textarea>
       </div>
     </div >-->
+    </div>
   </form>
 </div>
