--- a/html/menuContent.html
+++ b/html/menuContent.html
@@ -19,7 +19,10 @@
 	
 	<li><a href="#">Close Tabs</a></li>
 	
-	<li><a href="#">Test</a>
-		
+	<li><a href="#">Templates</a>
+		<ul>
+			<li><a href="#">Test Template</a></li>
+			<li><a href="#">Diabetes</a></li>
+		</ul>	
 	</li>
 </ul>
