--- a/html/index-tabs.html
+++ b/html/index-tabs.html
@@ -14,9 +14,9 @@
 	<link type="text/css" href="css/demo_page.css" rel="stylesheet" />
 	<link type="text/css" href="css/demo_table.css" rel="stylesheet" />
   
-	<script type="text/javascript" src="js/jquery-1.3.2.js"></script>
+	<script type="text/javascript" src="js/jquery-1.4.4.js"></script>
 	<script type="text/javascript" src="js/jquery.layout.js"></script>
-	<script type="text/javascript" src="js/ui.all-1.7.1.js"></script>
+	<script type="text/javascript" src="js/jquery-ui-1.8.6.custom.min.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>
 	<script type="text/javascript" src="js/jquery.highlight.js"></script>
 	<script type="text/javascript" language="javascript" src="js/jquery.dataTables.js"></script>
@@ -208,6 +208,7 @@
 						} );
 		</script>
 </body>
+	<link href="css/inettuts.js.css" rel="stylesheet" type-"text/css"/>
 		<script type="text/javascript" src="js/widgets/inettuts.js"></script>
      	<link href="css/inettuts.css" rel="stylesheet" type="text/css" />
      	
