--- a/html/test2.html
+++ b/html/test2.html
@@ -8,7 +8,7 @@
 
 	<title>Droppable Between Panes</title>
 
-	<link type="text/css" href="/medcafe/css/custom-theme/jquery-ui-1.7.2.custom.css" rel="stylesheet">
+	<link type="text/css" href="/medcafe/css/custom-theme/jquery-ui-1.8.6.custom.css" rel="stylesheet">
   	<link type="text/css" href="/medcafe/css/custom.css" rel="stylesheet">
 
 	<link type="text/css" href="/medcafe/css/demo_page.css" rel="stylesheet">
@@ -18,10 +18,10 @@
 	<link type="text/css" rel="stylesheet" href="/medcafe/css/jqzoom.css">
 	<link type="text/css" rel="stylesheet" href="/medcafe/css/jquery.iviewer.css">
 
-	<script type="text/javascript" src="/medcafe/js/jquery-1.3.2.js"></script>
+	<script type="text/javascript" src="/medcafe/js/jquery-1.4.4.js"></script>
 	<script type="text/javascript" src="/medcafe/js/jquery.layout.js"></script>
 
-	<script type="text/javascript" src="/medcafe/js/ui.all-1.7.1.js"></script>
+	<script type="text/javascript" src="/medcafe/js/jquery-ui-1.8.6.custom.min.js"></script>
 	<script type="text/javascript" src="/medcafe/js/custom.js"></script>
 	<script type="text/javascript" src="/medcafe/js/jquery.highlight.js"></script>
 	<script type="text/javascript" language="javascript" src="/medcafe/js/jquery.dataTables.js"></script>
@@ -439,6 +439,7 @@
 <div style="margin: 0px; visibility: visible; display: block; position: absolute; z-index: 2; top: auto; bottom: 0px; left: 0px; right: 0px; width: auto; height: 1px;" pane="south" class="ui-layout-south ui-layout-pane ui-layout-pane-south open"></div>
 
 
+	<link href="css/inettuts.js.css" rel="stylesheet" type-"text/css"/>
 <script type="text/javascript" src="js/widgets/inettuts.js"></script>
      	<link href="css/inettuts.css" rel="stylesheet" type="text/css">
 
