Change AddTab dialog, so that when enter key is pressed, tab is added

--- a/html/menuContent.html
+++ b/html/menuContent.html
@@ -7,7 +7,7 @@
 	<form>
 	<fieldset>
 		<label for="tabName">Name for new tab</label>
-		<input type="text" name="tabName" id="tabName" value="New" class="text ui-widget-content ui-corner-all" />
+		<input type="text" name="tabName" id="tabName" value="" class="text ui-widget-content ui-corner-all" />
 
 	</fieldset>
 	</form>
