--- a/website/html/header.html
+++ b/website/html/header.html
@@ -8,7 +8,7 @@
 <div id="container">
 <div id="container-inner">
 	<a name="top"></a><div id="header">
-    	<h1><a href="#">medCafe.org</a></h1>
+    	<a href="/"><img src="images/medCafe_logo.png" height="75" width="175" style="float:right;margin-right:50px;margin-top:8px;"></a><h1><a href="#">medCafe.org</a></h1>
   		<p>exploring alternative UIs for physicians</p>
         <div class="clear"></div>
     </div><!-- end header -->
