--- a/website/html/nav.html
+++ b/website/html/nav.html
@@ -5,7 +5,7 @@
             <li><a href="screenshots.jsp">Screen shots</a></li>
             <li><a href="thankyou.jsp">Contributions</a></li>
             <li><a href="development.jsp">Development</a></li>
-            <li><a href="#" onclick="alert('A wiki will be provided to facilitate community communication and cooridination.  It\'s not ready yet.')">Wiki</a></li>
+            <li><a href="index.jsp" onclick="alert('A wiki will be provided to facilitate community communication and cooridination.  It\'s not ready yet.')">Wiki</a></li>
         </ul>
     </div><!-- end nav -->
 
