Got the gallery working in IE 8.  Moved "thank you" for the theme to the contributions page.

--- a/website/html/js/themes/classic/classic-demo.html
+++ b/website/html/js/themes/classic/classic-demo.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Galleria Classic Theme</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-        <script src="../../../src/galleria.js"></script>
+        <script src="../../../galleria.js"></script>
         <style>
             html,body{background:#333}
             .content{color:#eee;font:14px/1.4 "helvetica neue", arial,sans-serif;width:620px;margin:20px auto}
@@ -16,7 +16,7 @@
 <body>
     <div class="content">
         <h1>Galleria Classic Theme</h1>
-        
+
         <div id="galleria">
             <img alt="Squirrel! That is all." src="http://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Eichh%C3%B6rnchen_D%C3%BCsseldorf_Hofgarten_edit.jpg/800px-Eichh%C3%B6rnchen_D%C3%BCsseldorf_Hofgarten_edit.jpg">
             <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Sea-otter-morro-bay_13.jpg/800px-Sea-otter-morro-bay_13.jpg">
