John Piescik's comments

--- a/website/html/header.html
+++ b/website/html/header.html
@@ -9,7 +9,7 @@
 <div id="container-inner">
 	<a name="top"></a><div id="header">
     	<a href="/"><img src="images/medCafe_logo.png" height="75" width="175" style="float:right;margin-right:50px;margin-top:8px;"></a><h1><a href="#">medCafe.org</a></h1>
-  		<p>exploring alternative UIs for physicians</p>
+  		<p>exploring alternative UIs for clinicians</p>
         <div class="clear"></div>
     </div><!-- end header -->
 
