Pretty views of json data coming from CCR

--- a/medj/html/nav.html
+++ b/medj/html/nav.html
@@ -1,11 +1,10 @@
-    <div id="nav">
-    	<ul>
-        	<li><a href="index.jsp">Home</a></li>
-            <li><a href="about.jsp">About</a></li>
-            <li><a href="screenshots.html">Screen shots</a></li>
-            <li><a href="thankyou.jsp">Contributions</a></li>
-            <li><a href="development.jsp">Development</a></li>
-            <!-- <li><a href="index.jsp" onclick="alert('A wiki will be provided to facilitate community communication and cooridination.  It\'s not ready yet.')">Wiki</a></li> -->
-        </ul>
-    </div><!-- end nav -->
+                <div id="nav">
+                    <ul>
+                        <li><a href="index.jsp">Home</a></li>
+                        <li><a href="http://www.ccrstandard.com/" target="_blank">CCR Home</a></li>
+                        <li><a href="upload.jsp">Upload File</a></li>
+                        <li><a href="patientList.jsp">CCR List</a></li>
+                    </ul>
+                </div>
+                <!-- end nav -->
 
