--- a/medj/html/header.html
+++ b/medj/html/header.html
@@ -1,15 +1,22 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>medCafe</title>
-    <link rel="stylesheet" href="css/styles.css" type="text/css" />
-</head>
-<body>
-<div id="container">
-<div id="container-inner">
-	<a name="top"></a><div id="header">
-    	<a href="/"><img src="images/medCafe_logo.png" height="75" width="175" style="float:right;margin-right:50px;margin-top:8px;"></a><h1><a href="#">medCafe.org</a></h1>
-  		<p>exploring alternative UIs for clinicians</p>
-        <div class="clear"></div>
-    </div><!-- end header -->
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+        <title>medJ</title>
+        <link rel="stylesheet" href="css/styles.css" type="text/css"/>
+    </head>
+    <body>
+        <div id="container">
+            <div id="container-inner">
+                <a name="top"></a>
+                <div id="header">
+                    <a href="/"><img src="images/medCafe_logo.png" height="75" width="175" style="float:right;margin-right:50px;margin-top:8px;"></a>
+                    <h1>
+                        <a href="#">medJ</a>
+                    </h1>
+                    <p>
+                        Bringing CCR to the web client
+                    </p>
+                    <div class="clear">
+                    </div>
+                </div>
+                <!-- end header -->
 
